fix graal compile opts for vthreads